--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
     <title>Netflix india - Watch TV Shows Online, Watch Movies Online</title>
 </head>
 <body>
 
     <header class="showcase">
         <div class="showcase-top">
-            <img src="img/logo.png" alt="Netflix" id="logo">
+            <img src="logo.png" alt="Netflix" id="logo">
             <a href="#" class="btn btn-rounded" id="sign">Sign In</a>
         </div>
         <div class="showcase-content">
@@ -24,8 +24,7 @@
         </div>
     </header>  
 
-    <section class="tab-content">
-        <div class="container">
+    
     <footer class="footer">
         <p>Questions? Call 000-800-919-1694</p>
         <div class="footer-cols">
